--- a/server/package.json
+++ b/server/package.json
@@ -7,23 +7,26 @@
     "start": "ts-node src/app.ts",
     "dev": "nodemon src/app.ts",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "init-db": "ts-node src/scripts/initDatabase.ts"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.10.9",
-    "jsonwebtoken": "^8.5.1",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.9",
+    "twilio": "^5.10.7"
   },
   "devDependencies": {
-    "typescript": "^4.1.2",
-    "ts-node": "^9.1.1",
-    "nodemon": "^2.0.7",
-    "jest": "^26.6.3",
+    "@types/express": "^4.17.8",
     "@types/jest": "^26.0.0",
-    "@types/node": "^14.14.31",
-    "@types/express": "^4.17.8"
+    "@types/node": "^24.10.1",
+    "jest": "^26.6.3",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "author": "Your Name",
   "license": "MIT"
