--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,43 +1,24 @@
 {
-
   "compilerOptions": {
-
     "target": "ES2020",
-
-    "useDefineForClassFields": true,
-
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-
-    "module": "ESNext",
-
+    "module": "commonjs",
+    "lib": ["ES2020"],
+    "outDir": "./dist",
+    "rootDir": "./src",
     "skipLibCheck": true,
-
-    "jsx": "react-jsx",
-
-    "moduleResolution": "bundler",
-
-    "allowImportingTsExtensions": true,
-
+    "moduleResolution": "node",
     "resolveJsonModule": true,
-
-    "isolatedModules": true,
-
-    "noEmit": true,
-
     "strict": true,
-
-    "noUnusedLocals": true,
-
-    "noUnusedParameters": true,
-
-    "noFallthroughCasesInSwitch": true,
-
+    "esModuleInterop": true,
+    "declaration": true,
+    "sourceMap": true,
     "forceConsistentCasingInFileNames": true
-
   },
-
   "include": ["src"],
-
-  "exclude": ["node_modules"]
-
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  }
 }
